@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho

' =========================
' Tables (en classes UML)
' =========================
class Club {
  +num_club : ID <<PK>>
  --
  nom_club : String
  adresse : String
  num_telephone : String
  ville : String
  departement : String
  region : String
  num_directeur : ID <<FK>>
}

class Utilisateur {
  +num_utilisateur : ID <<PK>>
  --
  nom : String
  prenom : String
  adresse : String
  age : int
  login : String
  mot_de_passe : String
  photo_profil_url : String
  type_compte : enum{prive, public}
  num_club : ID <<FK>>
}

class Concours {
  +num_concours : ID <<PK>>
  --
  theme : String
  date_debut : Date
  description : String
  date_fin : Date
  etat : enum{pas_commence, en_cours, attente, resultat, evalue}
  num_club : ID <<FK>>
  num_president : ID <<FK>>
}

class Dessin {
  +num_dessin : ID <<PK>>
  --
  commentaire : String
  classement : int
  date_remise : Date
  le_dessin : String
  num_concours : ID <<FK>>
  num_competiteur : ID <<FK>>
}

class Evaluation {
  +num_dessin : ID <<PK,FK>>
  +num_evaluateur : ID <<PK,FK>>
  --
  date_evaluation : Date
  note : float
  commentaire : String
}

class Competiteur {
  +num_utilisateur : ID <<PK,FK>>
  --
  date_premiere_participation : Date
}

class Evaluateur {
  +num_utilisateur : ID <<PK,FK>>
  --
  specialite : String
  xp : int
}

class President {
  +num_utilisateur : ID <<PK,FK>>
  --
  prime : float
}

class Administrateur {
  +num_utilisateur : ID <<PK,FK>>
  --
  date_debut : Date
}

class Directeur {
  +num_utilisateur : ID <<PK,FK>>
  --
  date_debut : Date
}

class Concours_Evaluateur {
  +num_concours : ID <<PK,FK>>
  +num_evaluateur : ID <<PK,FK>>
}

' =========================
' Relations UML (propres)
' =========================
Club "1" -- "0..*" Utilisateur : FK num_club
Club "1" -- "0..*" Concours    : FK num_club

Directeur "0..1" -- "0..*" Club   : FK num_directeur

Concours "1" -- "0..*" Dessin  : FK num_concours
Competiteur "1" -- "0..*" Dessin : FK num_competiteur

Dessin "1" -- "0..*" Evaluation : FK num_dessin
Evaluateur "1" -- "0..*" Evaluation : FK num_evaluateur

Concours "1" -- "0..*" Concours_Evaluateur : FK num_concours
Evaluateur "1" -- "0..*" Concours_Evaluateur : FK num_evaluateur

President "1" -- "0..*" Concours : FK num_president

' =========================
' Héritage UML
' =========================
Utilisateur <|-- Competiteur
Utilisateur <|-- Evaluateur
Utilisateur <|-- President
Utilisateur <|-- Administrateur
Utilisateur <|-- Directeur

@enduml
